[workspace.package]
name = "picotracker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace]
members = [
    "rp2040",
    "gpslib",
    "modbus_master",
    "envconst"
, "packet"]
resolver = "2"

[profile.release]
debug = 2
opt-level = 'z'
codegen-units = 1
overflow-checks = true
