[package]
name = "gpslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.38", default-features = false }
heapless = "0.8.0"
defmt = { version = "0.3.8", optional = true }

[features]
defmt = [ "dep:defmt", "heapless/defmt-03" ]

[profile.release]
opt-level = 's'
codegen-units = 1
overflow-checks = true