[package]
name = "modbus_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
defmt = { version = "0.3.5", optional = true }

[features]
std = []
defmt = [ "dep:defmt", "heapless/defmt" ]

[profile.release]
opt-level = 'z'
codegen-units = 1
overflow-checks = true