[package]
name = "picotracker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0" }
embassy-lora = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["time", "defmt"] }
lora-phy = { version = "1" }
lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embedded-graphics = "0.8.1"
mipidsi = { path = "/home/r/dev/rust/mipidsi", features = [ "async" ]}
display-interface-spi = { git = "https://github.com/therealprof/display-interface/", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
display-interface = { git = "https://github.com/therealprof/display-interface", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.7.16"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.2", features = ["nightly"]}
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
micromath = "2.0.0"
itertools = { version = "0.11.0", default-features = false }

[profile.release]
debug = 2

[patch.crates-io]
lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "1323eccc1c470d4259f95f4f315d1be830d572a3"}
