[package]
name = "picotracker"
version = "0.2.0"
license.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { path = "../../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { path = "../../embassy/embassy-time",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0" }
embassy-lora = { path = "../../embassy/embassy-lora", features = ["time", "defmt"] }

# lora-phy = { version = "3.0.0-alpha.1" }
lora-phy = { path = "../../lora-phy" }
lorawan-device = {path = "../../rust-lorawan/device" , default-features = false, features = ["async", "external-lora-phy"] }
lorawan = { path = "../../rust-lorawan/encoding", version = "0.7.4", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embedded-graphics = "0.8.1"
mipidsi = { path = "../mipidsi", features = [ "async" ] }
display-interface-spi = { git = "https://github.com/therealprof/display-interface/", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
display-interface = { git = "https://github.com/therealprof/display-interface", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
heapless = "0.7.16"

gpslib = { path = "../gpslib", features = ["defmt"]}
modbus_master = { path = "../modbus_master", features = ["defmt"]}
envconst = { path = "../envconst" }

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "1.2", features = ["nightly"]}
log = "0.4"
rand = { version = "0.8.5", default-features = false }
micromath = "2.0.0"
itertools = { version = "0.11.0", default-features = false }


[build-dependencies]
dotenvy = "0.15.7"

[profile.release]
debug = 2
codegen-units = 1
opt-level = 's'
# opt-level = 3
