[package]
name = "picotracker"
version = "0.2.0"
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = {  version = "0.6.0", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-98304"] }
embassy-time = { version = "0.3.2",  features = [ "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt",  "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.1" }

lora-phy = { version = "3.0.1", features = [ "lorawan-radio"] }
lorawan-device = { version = "0.12.2",  features = ["embassy-time", "default-crypto", "defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "cfg-target-has-atomic"] }
heapless = "0.8.0"
embedded-graphics = "0.8.1"
st7735-embassy = { version = "0.2.0", git="https://github.com/kalkyl/st7735-embassy", rev = "42246aa9fef10bbf0f49dabff10c9afebdd4094b"}
sht3x = { path = "../../sht3x", features = ["defmt"]}

gpslib = { path = "../gpslib", features = ["defmt"]}
modbus_master = { path = "../modbus_master", features = ["defmt"]}
envconst = { path = "../envconst" }

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2.1.0" }
log = "0.4.22"
rand = { version = "0.8.5", default-features = false }
micromath = "2.1.0"
itertools = { version = "0.13.0", default-features = false }

portable-atomic = { version = "1.7.0", features = ["critical-section"] } # needed for static_cell on thumbv6

critical-section = "1.1"

[build-dependencies]
dotenvy = "0.15.7"

[profile.release]
debug = 2
opt-level = 'z'
codegen-units = 1
overflow-checks = true
